# GP-Presets-Converter

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
docs/: README.md  api_reference.md  conversion_guide.md  development.md  installation.md  preset_format_analysis.md  troubleshooting.md  usage.md
examples/: README.md
examples/test_files/: simple_gp5.preset  simple_gp50.preset
examples/usage_examples/: basic_conversion.py  batch_conversion.py  format_analysis.py
examples/valeton_presets/: README.md
examples/valeton_presets/analysis/: README.md  format_notes.md
examples/valeton_presets/gp5/: README.md
examples/valeton_presets/gp50/: README.md
src/gp_presets_converter/: __init__.py  cli.py  converter.py
src/gp_presets_converter/config/: __init__.py  settings.py
src/gp_presets_converter/core/: __init__.py  analyzer.py  converter.py  parser.py  writer.py
src/gp_presets_converter/models/: __init__.py  common.py  gp50_preset.py  gp5_preset.py  preset.py
src/gp_presets_converter/utils/: __init__.py  binary_parser.py  file_handler.py  hex_dump.py  validation.py
tests/: __init__.py  conftest.py  test_converter.py
tests/integration/: test_end_to_end.py
tests/unit/: test_core_converter.py  test_models.py  test_parser.py  test_utils.py
